data/derived/fa15/progs/unify/prog1762.ml.out
Characters 70-98:
  let r=(mulByDigit o (List.rev l2))+b::[] in
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
